# advent-of-code

./: .gitignore  README.md
advent2016/: common.py  day1.py
advent2017/: Util.ex  day1.exs  day10.exs  day11.exs  day12.exs  day13.exs  day13.py  day15.exs  day16.exs  day17.exs  day19.exs  day2.exs  day20.exs  day23.exs  day24.exs  day3.exs  day4.exs  day5.exs  day6.exs  day7.exs  day8.exs  day9.exs  mix.exs
advent2017/data/: day19_test.txt  day2.txt
advent2018/: advent2018.cabal  stack.yaml
advent2018/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Main.hs  Util.hs
advent2020/: go.mod  go.sum
advent2020/01/: aoc01.go  aoc01_test.go
advent2020/02/: aoc02.go  aoc02_test.go
advent2020/03/: aoc03.go  aoc03_test.go
advent2020/04/: aoc04.go
advent2020/05/: aoc05.go
advent2020/06/: aoc06.go
advent2020/07/: aoc07.go
advent2020/08/: aoc08.go
advent2020/09/: aoc09.go
advent2020/10/: aoc10.go
advent2021/day01/: Cargo.toml
advent2021/day01/src/: main.rs
