name:                advent2018
version:             0.1.0.0
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable advent2018
  hs-source-dirs:      src
  main-is:             Day01.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, split, containers, criterion
